--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/527525ab23.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./sass/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>TravelAgency</title>
 </head>
 
 <body>
-
+    <button class="burger-btn">
+        <div class="burger-btn__box">
+            <div class="burger-btn__bars"></div>
+        </div>
+    </button>
 
 
     <script src="./js/main.js"></script>
